syntax = "proto3";

option csharp_namespace = "GrpcNet7";

service VehicleServiceGrpc {
	rpc GetVehicleList (Empty) returns (VehicleResponse);
	rpc GetVehicleById (VehicleRequestId) returns (VehicleList);
	rpc CreateVehicle (VehicleList) returns (RespMessage);
	rpc UpdateVehicle (VehicleList) returns (RespMessage);
	rpc DeleteVehicle (VehicleRequestId) returns (RespMessage);
}

message VehicleList {
	int32 Id = 1;
	string name = 2;
	string type = 3;
	string description = 4;
	string number = 5;
}

message VehicleRequestId {
	int32 id = 1;	
}

message VehicleResponse {
	repeated VehicleList items = 1;
}

message Empty { }

message RespMessage 
{
	string code = 1;
	string desc = 2;
}